--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="mobile_input_label">Enter mobile number</string>
+    <string name="generate_otp_button_name">Generate OTP</string>
 </resources>
