--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Application</string>
     <string name="mobile_input_label">Enter mobile number</string>
     <string name="generate_otp_button_name">Generate OTP</string>
+    <string name="verify_otp_button_text">Verify Otp</string>
 </resources>
