--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="loading">Loading...</string>
     <string name="loading_failed">loading failed !</string>
     <string name="retry">Retry</string>
+    <string name="verification_completed">Verification completed</string>
+    <string name="invalid_code">Invalid code</string>
+    <string name="mobile_otp_verification_successful">mobile otp verification successful</string>
 </resources>
