--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,14 @@
     <string name="verification_completed">Verification completed</string>
     <string name="invalid_code">Invalid code</string>
     <string name="mobile_otp_verification_successful">mobile otp verification successful</string>
+    <string name="otp_has_been_sent">Otp has been sent</string>
+    <string name="otp_auto_feed_is_done">Otp Auto feed is done</string>
+    <string name="error_occurred_during_otp_generation">Error occurred during OTP generation</string>
+    <string name="error_occurred_during_otp_verification">Error occurred during OTP verification</string>
+    <string name="auto_verification_done">Auto verification done</string>
+    <string name="verification_failed_due_to_invalid_request">Verification failed due to invalid request</string>
+    <string name="otp_dispatch_is_triggered">OTP dispatch is triggered</string>
+    <string name="otp_verification_failed">OTP verification failed</string>
+    <string name="otp_verification_failed_due_to_invalid_code">OTP verification failed due to invalid code</string>
+    <string name="trigger_dispatch_otp_failed">Trigger dispatch OTP failed</string>
 </resources>
