Added change mobile number button in OTP verification screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="gym_listing">Gym listing</string>
     <string name="location_permission">location permission</string>
     <string name="gym_details">Gym Details</string>
+    <string name="mobile_number_changed_by_user">Mobile number changed by user</string>
 </resources>
