Refactored related to book session model ui state. 1. Replaced selected session info pair with class. 2. Replaced sessions list and display name pair with class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="no_schedule_found">No schedule found!</string>
     <string name="book_session_screen_header_message">Select workout timing</string>
     <string name="book_session_header_text">Every process is followed by a mandatory sanitization process</string>
+    <string name="book_session_confirmation">Book Session Confirmation</string>
 </resources>
